Fix [General] Counter not aligned to text in input fields
Resolves iguazio JIRA ticket ID: 7976

--- a/src/igz_controls/components/validating-input-field/validating-input-field.less
+++ b/src/igz_controls/components/validating-input-field/validating-input-field.less
@@ -25,8 +25,8 @@
         font-weight: 700;
         line-height: 32px;
         position: absolute;
-        right: 9px;
-        bottom: 0;
+        right: 6px;
+        bottom: 2px;
         z-index: 3;
 
         &.invalid {
@@ -159,7 +159,7 @@
 
     &.with-counter {
         .input-field {
-            padding: 0 30px 0 10px;
+            padding: 0 32px 0 10px;
         }
 
         .textarea-field {
